--- a/app/stylesheets/mixins.scss
+++ b/app/stylesheets/mixins.scss
@@ -1,14 +1,22 @@
 @mixin background-image-retina($file, $type, $width, $height) {
   background-image: url($file + '.' + $type);
- 
-  @media (-webkit-min-device-pixel-ratio: 2), (-moz-device-pixel-ratio: 2), (min-device-pixel-ratio: 2) {
-    & {
-      background-image: url($file + '@2x.' + $type);
-      -webkit-background-size: $width $height;
-      -moz-background-size: $width $height;
-      -ms-background-size: $width $height;
-      background-size: $width $height;
-    }
+
+  @media
+  only screen and (-webkit-min-device-pixel-ratio: 2),
+  only screen and (   min--moz-device-pixel-ratio: 2),
+  only screen and (   -moz-min-device-pixel-ratio: 2),
+  only screen and (       -moz-device-pixel-ratio: 2),
+  only screen and (     -o-min-device-pixel-ratio: 2/1),
+  only screen and (        min-device-pixel-ratio: 2),
+  only screen and (                min-resolution: 192dpi),
+  only screen and (                min-resolution: 2dppx) { 
+    
+    background-image: url($file + '@2x.' + $type);
+    -webkit-background-size: $width $height;
+    -moz-background-size: $width $height;
+    -ms-background-size: $width $height;
+    background-size: $width $height;
+
   }
 }
 
